--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <properties>
     <maven.compiler.source>15</maven.compiler.source>
     <maven.compiler.target>15</maven.compiler.target>
+    <spring.version>5.3.23</spring.version>
   </properties>
   <name>hibernate Maven Webapp</name>
   <url>http://maven.apache.org</url>
@@ -45,6 +46,14 @@
       <version>1.18.24</version>
       <scope>provided</scope>
     </dependency>
+
+    <!-- Spring -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
 
 
   </dependencies>
