--- a/pom.xml
+++ b/pom.xml
@@ -10,35 +10,37 @@
     <maven.compiler.target>15</maven.compiler.target>
     <spring.version>5.3.23</spring.version>
   </properties>
-  <name>hibernate Maven Webapp</name>
-  <url>http://maven.apache.org</url>
+<!--  <name>hibernate Maven Webapp</name>-->
+<!--  <url>http://maven.apache.org</url>-->
+
+
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>junit</groupId>-->
+<!--      <artifactId>junit</artifactId>-->
+<!--      <version>3.8.1</version>-->
+<!--      <scope>test</scope>-->
+<!--    </dependency>-->
 
 
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-core</artifactId>
-      <version>5.6.12.Final</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.hibernate</groupId>-->
+<!--      <artifactId>hibernate-core</artifactId>-->
+<!--      <version>5.6.12.Final</version>-->
+<!--    </dependency>-->
 
-
+<!--Database-->
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.31</version>
     </dependency>
 
-    <dependency>
-      <groupId>javax.persistence</groupId>
-      <artifactId>javax.persistence-api</artifactId>
-      <version>2.2</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>javax.persistence</groupId>-->
+<!--      <artifactId>javax.persistence-api</artifactId>-->
+<!--      <version>2.2</version>-->
+<!--    </dependency>-->
 
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -54,10 +56,16 @@
       <version>${spring.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
 
 
   </dependencies>
-  <build>
-    <finalName>hibernate</finalName>
-  </build>
+<!--  <build>-->
+<!--    <finalName>hibernate</finalName>-->
+<!--  </build>-->
 </project>
