--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
       <version>8.0.31</version>
     </dependency>
 
+<!--      Entity? -->
 <!--    <dependency>-->
 <!--      <groupId>javax.persistence</groupId>-->
 <!--      <artifactId>javax.persistence-api</artifactId>-->
@@ -61,6 +62,42 @@
       <artifactId>spring-jdbc</artifactId>
       <version>${spring.version}</version>
     </dependency>
+
+<!--video-->
+<!--      <dependency>-->
+<!--          <groupId>org.springframework.boot</groupId>-->
+<!--          <artifactId>spring-boot-starter-thymeleaf</artifactId>-->
+<!--      </dependency>-->
+<!--      <dependency>-->
+<!--          <groupId>org.springframework.boot</groupId>-->
+<!--          <artifactId>spring-boot-starter-web</artifactId>-->
+<!--      </dependency>-->
+<!--      <dependency>-->
+<!--          <groupId>org.springframework.boot</groupId>-->
+<!--          <artifactId>spring-boot-devtools</artifactId>-->
+<!--          <scope>runtime</scope>-->
+<!--          <optional>true</optional>-->
+<!--      </dependency>-->
+
+<!--      <dependency>-->
+<!--          <groupId>org.springframework.boot</groupId>-->
+<!--          <artifactId>spring-boot-starter-data-jpa</artifactId>-->
+<!--&lt;!&ndash;          технология кот пзволяет связать java spring  проект с mysql&ndash;&gt;-->
+<!--      </dependency>-->
+<!--      <dependency>-->
+<!--          <groupId>org.springframework.boot</groupId>-->
+<!--          <artifactId>spring-boot-starter-test</artifactId>-->
+<!--          <scope>test</scope>-->
+<!--          <exclusions>-->
+<!--          <exclusion>-->
+<!--              <groupId>org.junit.vintage</groupId>-->
+<!--              <artifactId>junit-vintage-engine</artifactId>-->
+<!--          </exclusion>-->
+<!--          </exclusions>-->
+
+<!--      </dependency>-->
+
+
 
 
 
